Added tailwind styler

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
+    <link href="/output.css" rel="stylesheet">
 </head>
 <body>
-    
 
-    <h1>Welcome to the Inventory Management System</h1>
+    <div class="flex items-center justify-center flex-col gap-10 my-10">
+        <h1 class="text-3xl text-orange-600 ">Welcome to the Inventory Management System</h1>
+        <a href="/inventory" class="bg-pink-500 text-white px-6 py-4 rounded-lg hover:bg-blue-700 transition-colors">Inventory</a>
+    </div>
 
-    <a href="/inventory">Inventory</a>
+
+    <script src="https://unpkg.com/@vimesh/style"></script>
 </body>
 </html>
