Added MongoDb Connectivity and Design

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,21 @@
     <title>Welcome Page</title>
     <link href="/output.css" rel="stylesheet">
 </head>
-<body>
+<body class="flex flex-col min-h-screen p-10">
+
+    <header class="text-center my-10">
+        <h3>BAYAN ACADEMY - WEB DEVELOPMENT BACKEND 101</h3>
+    </header>
 
     <div class="flex items-center justify-center flex-col gap-10 my-10">
-        <h1 class="text-3xl text-orange-600 ">Welcome to the Inventory Management System</h1>
-        <a href="/inventory" class="bg-pink-500 text-white px-6 py-4 rounded-lg hover:bg-blue-700 transition-colors">Inventory</a>
+        <h1 class="text-3xl text-blue-600 text-center">Welcome to the Inventory Management System</h1>
+        <a href="/inventory" class="bg-blue-500 text-white px-6 py-4 rounded-lg hover:bg-blue-600 transition-colors">Open Inventory</a>
     </div>
+
+    <footer class="text-center mt-auto">
+        <p>Developed by Franc Alvenn Dela Cruz</p>
+        <p>&copy; 2024 Inventory Management System. All rights reserved.</p>
+    </footer>
 
 
     <script src="https://unpkg.com/@vimesh/style"></script>
