Added image upload

--- a/views/inventory/index.ejs
+++ b/views/inventory/index.ejs
@@ -10,6 +10,13 @@
 </head>
 <body class="flex flex-col min-h-screen p-10">
 
+    <div class="modal hidden">
+        <div class="modal-content">
+            <p>Modal Content</p>
+            <button class="close-modal">Close</button>
+        </div>
+    </div>
+
     <a href="/"><i class="fa-solid fa-chevron-left hover:text-blue-500 px-3"></i>Home</a>
 
     <div class="flex align-center justify-between gap-5 py-5">
