--- a/views/inventory/edit.ejs
+++ b/views/inventory/edit.ejs
@@ -14,36 +14,45 @@
     <h1 class="text-3xl text-blue-500 mb-5">Edit Item</h1>
 
 
-    <form action="/inventory/<%= item.id %>?_method=PUT" method="POST">
-        <section class="flex flex-col gap-2">
+    <form action="/inventory/<%= item.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+        <div class="flex gap-5">
+            <section class="flex-[6] flex-col gap-5">
+                <div class="flex flex-col w-full">
+                    <label for="itemName">Item Name: </label>
+                    <input type="text" name="name" id="name" value="<%= item.name %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+                </div>
+                <div class="flex flex-col w-full">
+                    <label for="category">Category: </label>
+                    <input type="text" name="category" id="category" value="<%= item.category %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+                </div>
+                <div class="flex flex-col w-full">
+                    <label for="quantity">Quantity: </label>
+                    <input type="number" name="quantity" id="quantity" value="<%= item.quantity %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+                </div>
+                <div class="flex flex-col w-full">
+                    <label for="price">Price: </label>
+                    <input type="number" name="price" id="price" value="<%= item.price %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+                </div>
+                <div class="flex flex-col w-full">
+                    <label for="description">Description: </label>
+                    <input type="text" name="description" id="description" value="<%= item.description %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+                </div>
+
+                <div class="flex flex-col w-full">
+                    <label for="image">Upload Image </label>
+                    <input type="file" name="image" id="image" placeholder="Image" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+                </div>
             
-            <div class="flex flex-col w-full">
-                <label for="itemName">Item Name: </label>
-                <input type="text" name="name" id="name" value="<%= item.name %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+                <button type="submit" class="bg-blue-500 text-white px-6 py-2 mt-4 rounded-lg hover:bg-blue-600 transition-colors w-full">Save</button>
+            </section>
+            <div class="flex-[3]">
+                <img src="data:image/<%=item.image.contentType%>;base64,
+                            <%=item.image.data.toString('base64')%>"
+                    alt="Item Image"
+                    class="w-fit h-auto p-5 mt-5 border border-gray-300 rounded-lg"
+                >
             </div>
-
-            <div class="flex flex-col w-full">
-                <label for="category">Category: </label>
-                <input type="text" name="category" id="category" value="<%= item.category %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
-            </div>
-
-            <div class="flex flex-col w-full">
-                <label for="quantity">Quantity: </label>
-                <input type="number" name="quantity" id="quantity" value="<%= item.quantity %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
-            </div>
-
-            <div class="flex flex-col w-full">
-                <label for="price">Price: </label>
-                <input type="number" name="price" id="price" value="<%= item.price %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
-            </div>
-
-            <div class="flex flex-col w-full">
-                <label for="description">Description: </label>
-                <input type="text" name="description" id="description" value="<%= item.description %>" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
-            </div>
-            
-            <button type="submit" class="bg-blue-500 text-white px-6 py-2 mt-4 rounded-lg hover:bg-blue-600 transition-colors w-full">Save</button>
-        </section>
+        </div>
     </form>
 </body>
 </html>
