--- a/views/inventory/new.ejs
+++ b/views/inventory/new.ejs
@@ -15,7 +15,7 @@
 
 
 
-    <form action="/inventory" method="POST">
+    <form action="/inventory" method="POST" enctype="multipart/form-data">
         <section class="flex flex-col gap-2">
 
             <div class="flex flex-col w-full">
@@ -41,6 +41,11 @@
             <div class="flex flex-col w-full">
                 <label for="description">Description: </label>
                 <input type="text" name="description" id="description" placeholder="Description" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+            </div>
+
+            <div class="flex flex-col w-full">
+                <label for="image">Upload Image </label>
+                <input type="file" name="image" id="image" placeholder="Image" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
             </div>
 
             <button type="submit" class="bg-blue-500 text-white px-6 py-2 mt-4 rounded-lg hover:bg-blue-600 transition-colors w-full">Add Item</button>
