--- a/views/inventory/show.ejs
+++ b/views/inventory/show.ejs
@@ -16,6 +16,11 @@
 
     <div class="flex justify-center align-center">
         <div class="flex flex-col gap-5 border border-gray-300 rounded-lg p-4 w-96">
+            <img src="data:image/<%=item.image.contentType%>;base64,
+                        <%=item.image.data.toString('base64')%>"
+                alt="Item Image"
+                class="w-full"
+            >
             <p class="font-bold text-xl">Item Name: <%= item.name %></p>
             <p>Category: <%= item.category %></p>
             <p>Quantity: <%= item.quantity %></p>
