--- a/views/inventory/edit.ejs
+++ b/views/inventory/edit.ejs
@@ -40,7 +40,7 @@
 
                 <div class="flex flex-col w-full">
                     <label for="image">Upload Image </label>
-                    <input type="file" name="image" id="image" placeholder="Image" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" required>
+                    <input type="file" name="image" id="image" placeholder="Image" class="p-3 border border-gray-300 rounded-lg hover:border-blue-500" >
                 </div>
             
                 <button type="submit" class="bg-blue-500 text-white px-6 py-2 mt-4 rounded-lg hover:bg-blue-600 transition-colors w-full">Save</button>
